lab1/Test/L1-A-12-20.output
Error Type A at Line 1
Error Type B at Line 14
Error Type A at Line 20
Error Type A at Line 24
Error Type A at Line 28
Error Type A at Line 30
