lab1/Test/L1-A-12-20.cmm
float ~_sA_jC7Wfb ( ) {
  if ( Ipqv )   while ( p07ZEjI ) {
    struct {
    }L0C1Z [ 1319706829 ] ;
  }
else   if ( GXF4JiHavKhlEr )   return LOKRknZuADA 
    = fyWGk2mb3bJGRkrhW <= _jKYsgO * ! pPKWA9Eh [ fPNajUMxKPpk 
    || C4TBp && mPkFKLT4oRo < uLEgX7vXFhpBTijX0_ - MCv 
    / - lPfg8w6Lv ( vkdJJ2BRhgL_1gi && Pc + ! ( _nHqLY 
    || TsYF1 > AUg9KaM + oNdlyUTTBcDXH3YSEMm [ ZExVgYXS 
    = qb48k = spXi0z5o0O >= sznB9 * nsgp6uCPge ( GzBB5Hqig_ 
    , k_s4sRwx3_8vQqU , ITV7euQVi57CsHRoRkY && PodRK59EvZlygP2V6KS 
    != fQfx4Cfa7nTLho ( fA || LhxDOz3K57Y_Z0Uh < ! 1702290186 
    * SCkJ9GiuT ) ) ] . == - ! 480818018.1216904003 ) 
    + w781NJjP ( ) ) . Yf ] ;


}
int ;
struct beV YHmg_dd3ak8I , ~ngUS3qxUGRSMaSTo5P 

;
int b85ETxIl ( ) {
}`
struct {
  int Aw191PFRZlN5 ;
  struct PgHtlhpm8d {
&  }zPDz1RfVH8uKbNY , oCCk8O31DTGYM5 = xRsVJDjlBc 
    ;
}RrxXvAKeRKr3 ( int ^SaAaXvuIR5 ) {
}
struct cjn3OiH ;
int ;
int ;
int ;
int kzb ( int f3g8cHjufn , int qzvH6iae ) {
}
int qnw8PV4vz35mR ( ) {
}
int svglJ0VFtoQqCJjwM_ ( ) {
  hwcM9dEI_cD_G2 ;
  tr0ruyKI7S4qP3DWAk ;
  RXBYdBo0uoIxnACzc0 ;
  if ( nz )   Ya ;
else   e2h ;

}
